--- a/src/main/client/index.html
+++ b/src/main/client/index.html
@@ -6,9 +6,12 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="Pragma" content="no-cache, max-age=0"/>
     <meta http-equiv="Expires" content="-1"/>
-    <title>logicline Customer Service</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />
+    <title>Indicent Report</title>
+    <!--<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />-->
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/image/png; charset=binary" />
+    <link rel="icon" href="./img/favicon.png" type="image/image/png; charset=binary" />
+    
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,400italic' rel='stylesheet' type='text/css'>
     <!-- build:css css/logicline.min.css -->
       <link href="./css/logicline.css" rel="stylesheet">
