--- a/src/main/client/index.html
+++ b/src/main/client/index.html
@@ -6,13 +6,15 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="Pragma" content="no-cache, max-age=0"/>
     <meta http-equiv="Expires" content="-1"/>
-    <title>logicline Customer Service</title>
+    <title>Incident Report</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon; charset=binary" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,400italic' rel='stylesheet' type='text/css'>
+    
     <!-- build:css css/logicline.min.css -->
       <link href="./css/logicline.css" rel="stylesheet">
     <!-- endbuild -->
+    
     <!-- build:js js/logicline.min.js -->
       <!-- AngularJS -->
       <script src="./lib/vendor/bower_components/angular/angular.js"></script>
